# logrizon

./: .gitignore  README.md  docker-compose.yml
.github/workflows/: deploy.yml
backend/: .gitignore  Dockerfile  README.md  commands.yml  pyproject.toml
backend/chats/: admin.py  models.py  serializers.py  urls.py  views.py
backend/chats/migrations/: 0001_initial.py
backend/common/: models.py
backend/communities/: admin.py  models.py  serializers.py  urls.py  views.py
backend/communities/migrations/: 0001_initial.py
backend/config/: settings.py  urls.py
backend/fastapi_app/: config.py  gpt_service.py  main.py
backend/fastapi_app/prompts/: few_shot.json  prompt.py
backend/notes/: admin.py  models.py  serializers.py  urls.py
backend/notes/migrations/: 0001_initial.py  0002_initial.py  0003_remove_note_title.py
backend/users/: admin.py  models.py
backend/users/migrations/: 0001_initial.py
frontend/: .gitignore  Dockerfile  README.md  pubspec.yaml
frontend/ios/Runner.xcodeproj/: project.pbxproj
frontend/lib/: main.dart
frontend/lib/common/utils/: api.dart  logger.dart  utils.dart
frontend/lib/common/widgets/: bottom_nav_bar.dart  form_button.dart  write_form.dart
frontend/lib/config/: api.dart  env_config.dart
frontend/lib/core/router/: router.dart  router_const.dart
frontend/lib/providers/: tab_provider.dart  text_draft_provider.dart
frontend/lib/route/: router.dart  router_const.dart
frontend/lib/views/: home_screen.dart
frontend/lib/views/entrypoint/: entrypoint.dart
frontend/test/: widget_test.dart
nginx/: nginx.conf
(+7 files in other folders)
